# autotools-sample

./: autogen.sh  configure.ac
m4/: Makefile.am
src/: Makefile.am  main.c
